Add info page and kofi widget
Change maintenance page

--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -1,1 +1,4 @@
-This site is currently under maintenance!
+<div style="display: flex; justify-content: center; align-items: center;  gap: 2rem; flex-direction: column;">
+    <p style="font-family: monospace; font-size: 1.5rem;">Netdis.org is currently under maintenance. Please check back later.</p>
+    <img src="lain.gif" alt="lain trying to fix a webserver" srcset="">
+</div>
